k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astraops-ingress
  namespace: astraops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app.zorvexa-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astraops-frontend
                port:
                  number: 80
    - host: api.zorvexa-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astraops-backend
                port:
                  number: 80
